--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "yiisoft/yii2": "~2.0.14",
         "yiisoft/yii2-bootstrap4" : "^2.0.8",
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
-        "fxp/composer-asset-plugin": "^1.4.1"
+        "fxp/composer-asset-plugin": "^1.4.1",
+        "npm-asset/leaflet": "^1.6",
+        "bower-asset/fontawesome": "^5.13"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
